chore: add some packages to dependencies, update project config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,5 +15,8 @@
     "plugin:@typescript-eslint/recommended",
     "airbnb-base"
   ],
-  "rules": {}
+  "rules": {
+    "import/extensions": 0,
+    "import/prefer-default-export": 0
+  }
 }
