--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint --ext .ts --fix src/",
     "test": "jest",
     "prepublishOnly": "rm -fr dsit && yarn build",
-    "build": "tsc --build tsconfig.json"
+    "build": "tsc --build tsconfig.json && webpack"
   },
   "repository": {
     "type": "git",
@@ -21,12 +21,10 @@
   "homepage": "https://github.com/yidafu/ts-template#readme",
   "lint-staged": {
     "*.{ts,tsx}": [
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ],
     "*.{css,scss}": [
-      "stylelint --fix",
-      "git add"
+      "stylelint --fix"
     ]
   },
   "husky": {
@@ -38,7 +36,13 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@types/css-tree": "^1.0.3",
     "@types/jest": "^25.1.4",
+    "@types/js-yaml": "^3.12.2",
+    "@types/lodash": "^4.14.149",
+    "@types/md5": "^2.1.33",
+    "@types/node": "^13.9.0",
+    "@types/puppeteer": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "2.7.0",
     "@typescript-eslint/parser": "2.7.0",
     "babel-eslint": "10.0.3",
@@ -51,11 +55,24 @@
     "eslint-plugin-react": "7.14.3",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
+    "lint-staged": "^10.0.8",
     "stylelint": "7.12.0",
     "stylelint-config-standard": "16.0.0",
     "stylelint-processor-html": "1.0.0",
     "ts-jest": "^25.2.1",
+    "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "3.7.2"
+  },
+  "dependencies": {
+    "@auncel/common": "^0.0.1-alpha.4",
+    "@dovyih/x-tree-diff-plus": "0.0.2-alpha.4",
+    "args": "^5.0.1",
+    "css-tree": "^1.0.0-alpha.39",
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.15",
+    "md5": "^2.2.1",
+    "puppeteer": "^2.1.1"
   }
 }
