--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --ext .ts --fix src/",
-    "test": "jest",
+    "test": "jest --runInBand",
     "prepublishOnly": "rm -fr dsit && yarn build",
     "build": "tsc --build tsconfig.json && webpack"
   },
@@ -36,12 +36,13 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@jest/test-sequencer": "^25.1.0",
     "@types/css-tree": "^1.0.3",
     "@types/jest": "^25.1.4",
     "@types/js-yaml": "^3.12.2",
     "@types/lodash": "^4.14.149",
     "@types/md5": "^2.1.33",
-    "@types/node": "^13.9.0",
+    "@types/node": "^13.9.1",
     "@types/puppeteer": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "2.7.0",
     "@typescript-eslint/parser": "2.7.0",
@@ -63,11 +64,13 @@
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "3.7.2"
+    "typescript": "3.7.2",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   },
   "dependencies": {
     "@auncel/common": "^0.0.1-alpha.4",
-    "@dovyih/x-tree-diff-plus": "0.0.2-alpha.4",
+    "@dovyih/x-tree-diff-plus": "0.0.2-alpha.6",
     "args": "^5.0.1",
     "css-tree": "^1.0.0-alpha.39",
     "js-yaml": "^3.13.1",
