--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --ext .ts --fix src/",
-    "test": "jest --runInBand",
+    "test": "jest",
     "prepublishOnly": "rm -fr dsit && yarn build",
     "build": "tsc --build tsconfig.json && webpack"
   },
@@ -70,7 +70,7 @@
   },
   "dependencies": {
     "@auncel/common": "^0.0.1-alpha.4",
-    "@dovyih/x-tree-diff-plus": "0.0.2-alpha.6",
+    "@dovyih/x-tree-diff-plus": "0.0.2-alpha.8",
     "args": "^5.0.1",
     "css-tree": "^1.0.0-alpha.39",
     "js-yaml": "^3.13.1",
