--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 registry=https://registry.npm.taobao.org
-PUPPETEER_DOWNLOAD_HOST=https://storage.googleapis.com.cnpmjs.org
+puppeteer_download_host=https://npm.taobao.org/mirrors
