--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ts-template",
   "description": "typescript project template.",
-  "version": "0.0.1",
+  "version": "0.1.0-alpha.1",
   "main": "dist/index.js",
   "files": [
     "bin",
