--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-template",
+  "name": "@auncel/diff-dom-core",
   "description": "typescript project template.",
   "version": "0.1.0-alpha.1",
   "main": "dist/index.js",
