chore: support codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,15 @@ install:
 
 script:
   - npm run build
-  - npm run test
+  - npm run test --coverage
+
+after_success:
+  # - codecov
+  - bash <(curl -s https://codecov.io/bash) 
 
 branches:
   only:
     - master
+env:
+  - CODECOV_TOKEN="0f0b771d-2cb6-47f4-99ae-a16d33024e73"
+  
