--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ install:
   - yarn
 
 script:
-  - yarn build
-  - yarn test --coverage
+  - yarn build && yarn test --coverage
 
 after_success:
   # - codecov
