chore: modify^Cfter_success hook

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
 
 after_success:
   # - codecov
-  - bash <(curl -s https://codecov.io/bash) 
+  - curl -s https://codecov.io/bash | bash
 
 branches:
   only:
