--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
   - yarn
 
 script:
-  - yarn build && yarn test --coverage --detectOpenHandles
+  - yarn build && yarn test --coverage --detectOpenHandles --forceExit --ci
 
 # after_success:
 #   # - codecov
