--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
   "dependencies": {
     "@auncel/common": "^0.0.1-alpha.4",
     "@dovyih/x-tree-diff-plus": "0.0.2-alpha.8",
-    "args": "^5.0.1",
+    "commander": "^5.0.0",
     "css-tree": "^1.0.0-alpha.39",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
