--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@jest/test-sequencer": "^25.1.0",
     "@types/css-tree": "^1.0.3",
+    "@types/expect-puppeteer": "^4.4.0",
     "@types/jest": "^25.1.4",
+    "@types/jest-environment-puppeteer": "^4.3.1",
     "@types/js-yaml": "^3.12.2",
     "@types/lodash": "^4.14.149",
     "@types/md5": "^2.1.33",
@@ -60,9 +62,12 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-lean-imports": "0.3.3",
     "eslint-plugin-react": "7.14.3",
+    "expect-puppeteer": "^4.4.0",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
+    "jest-puppeteer": "^4.4.0",
     "lint-staged": "^10.0.8",
+    "merge": "^1.2.1",
     "stylelint": "7.12.0",
     "stylelint-config-standard": "16.0.0",
     "stylelint-processor-html": "1.0.0",
