--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@auncel/diff-dom-core",
   "description": "typescript project template.",
-  "version": "0.1.0",
+  "version": "0.2.0-alpha.1",
   "main": "dist/index.js",
   "files": [
     "bin",
