--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@jest/test-sequencer": "^25.1.0",
     "@types/css-tree": "^1.0.3",
+    "@types/debug": "^4.1.5",
     "@types/expect-puppeteer": "^4.4.0",
     "@types/jest": "^25.1.4",
     "@types/jest-environment-puppeteer": "^4.3.1",
@@ -84,6 +85,7 @@
     "@dovyih/x-tree-diff-plus": "0.1.0",
     "commander": "^5.0.0",
     "css-tree": "^1.0.0-alpha.39",
+    "debug": "^4.1.1",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.15",
     "md5": "^2.2.1",
