--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "expect-puppeteer": "^4.4.0",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
+    "jest-html-reporter": "^3.1.3",
     "jest-puppeteer": "^4.4.0",
     "lint-staged": "^10.0.8",
     "merge": "^1.2.1",
@@ -82,7 +83,7 @@
   },
   "dependencies": {
     "@auncel/common": "^0.0.1-alpha.4",
-    "@dovyih/x-tree-diff-plus": "0.1.0",
+    "@dovyih/x-tree-diff-plus": "0.1.4",
     "commander": "^5.0.0",
     "css-tree": "^1.0.0-alpha.39",
     "debug": "^4.1.1",
